fix config loki

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advanced-frontend1",
+  "name": "advanced-frontend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
