--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
@@ -88,6 +89,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-i18next": "^12.3.1",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2"
   },
   "loki": {
