--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "storybook": "^7.0.21",
+    "storybook-addon-mock": "^4.2.1",
     "style-loader": "^3.3.3",
     "stylelint": "^15.7.0",
     "stylelint-config-standard-scss": "^9.0.0",
@@ -112,6 +113,7 @@
     "react-virtualized": "^9.22.5"
   },
   "loki": {
+    "fetchFailIgnore": "https://testapi.ru",
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.docker",
