--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.5",
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
@@ -68,6 +69,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
